   > Dispell: Magic @ L15
   > Group Heal: Magic @ L20
   > Curify: Magic @ L22
   > [P] Clear Mind: Passive @ L23
   > Resurgence: Magic @ L25
  ~ Player 4, 3 skills:
   > Focus Up: Special @ L22
   > [P] Sharp Eye: Passive @ L24
   > [P] Masterful: Passive @ L25
  ~ Equipment, 4 skills:
   > Dark Orb: Tome
   > Soul Shackles: Tome
   > Wyvern's Fury: Weapon, Tome
   > Ice II: Tome
 - Added 102 new items:
  ~ 8 recovery/buff items:
   > Well-Rounded Combination
   > Large Potion
   > Large Elixir
   > Water Jug
   > Dispel Potion
   > Stimulant
   > Vicious Root
   > Fire Resistance Potion
  ~ 10 foodstuffs:
   > Tomato
   > Dragonfruit
   > Starfruit
   > Processed Oats
   > Mana Fritters
   > Seafood Meal
   > Carrot Seeds
   > Wheat Seeds
   > Oat Seeds
   > Tomato Seeds
  ~ 36 materials:
   > Fiery Powder
   > Malicious Essence
   > Shadowspec Ingot
   > Blank Tome
   > Feral Bat Wing
   > Thick-Skinned Herb
   > Turtle Scute
   > Medicinal Herb
   > Medicinal Root
   > Raw Truffle
   > Web Ball
   > Tarantula Silk
   > Vial of Poison
   > Petrified Wood
   > Dragon Scale
   > Enchanted Dragon Scale
   > Forest Core
   > Wind Catalyst
   > Icy Gel
   > Ice Cube
   > Frozen Jewel
   > Frozen Core
   > Gazer Goop
   > Stinger
   > Ectoblood
   > Ectoplasm
   > Fiery Blood
   > Tellurium Dust
   > Tellurium Alloy
   > Life Crystal
   > Mana Crystal
   > Mysterious Yellow Badge
   > Knight Token
   > Mage Token
   > Cleric Token
   > Rogue Token
  ~ 13 upgraders:
   > ATK Scroll ★
   > MAT Scroll ★
   > DEF Scroll ★
   > MDF Scroll ★
   > EVA Scroll
   > PDR Scroll
   > MDR Scroll
   > GRD Scroll
   > HRG Scroll
   > MRG Scroll
   > EXR Scroll
   > MCR Scroll
   > INT Scroll
  ~ 8 fishing related items:
   > Flimsy Rod
   > Basic Rod
   > Reinforced Rod
   > Worm
   > Fathead Carp
   > Whiskerfish
   > Northern Redbelly Dace
   > Blue Crab
  ~ 27 miscellaneous items:
   > Map of Telluria
   > Phantasmal Charm
   > Advanced Salvage Kit
   > Seed Maker