@@ -3498,7 +3498,7 @@
     ],
     "gold": 72,
     "name": "Horrorspore",
-    "note": "<Element: Plant>\n<Passive State: 136>\n\n<AI Priority>\nState !== Poisoned +++ Random 60%: Poison Powder\n</AI Priority>\n\n<Enemy Drops>\nBrown Mushroom: 90%\nBrown Mushroom: 90%\nBrown Mushroom: 90%\nRaw Truffle: 20%\nRaw Truffle: 10%\nWorm: 50%\nWorm: 50%\nWorm: 50%\nEarth Essence: 20%\n</Enemy Drops>",
+    "note": "<Element: Plant>\n<Passive State: 136>\n\n<AI Priority>\nState !== Poisoned +++ Random 60%: Poison Powder\n</AI Priority>\n\n<Enemy Drops>\nBrown Mushroom: 90%\nBrown Mushroom: 90%\nBrown Mushroom: 90%\nRaw Truffle: 20%\nRaw Truffle: 10%\nWorm: 50%\nWorm: 50%\nWorm: 50%\nPlant Essence: 20%\n</Enemy Drops>",
     "params": [
       2000,
       0,
@@ -3549,7 +3549,7 @@
     ],
     "gold": 54,
     "name": "Baby Ent",
-    "note": "<Element: Plant>\n<Passive State: 136, 143>\n\n<AI Priority>\nState !== Amnesia +++ Random 40%: Amnesia\nState !== Silenced +++ Random 40%: Silence\n</AI Priority>\n\n<Enemy Drops>\nMedicinal Root: 16.66%\nMedicinal Root: 16.66%\nBattle Plan: 3.33%\nPetrified Wood: 60%\nPetrified Wood: 60%\nPetrified Wood: 60%\nWorm: 50%\nWorm: 50%\nWorm: 50%\nEarth Essence: 20%\n</Enemy Drops>",
+    "note": "<Element: Plant>\n<Passive State: 136, 143>\n\n<AI Priority>\nState !== Amnesia +++ Random 40%: Amnesia\nState !== Silenced +++ Random 40%: Silence\n</AI Priority>\n\n<Enemy Drops>\nMedicinal Root: 16.66%\nMedicinal Root: 16.66%\nBattle Plan: 3.33%\nPetrified Wood: 60%\nPetrified Wood: 60%\nPetrified Wood: 60%\nWorm: 50%\nWorm: 50%\nWorm: 50%\nPlant Essence: 20%\n</Enemy Drops>",
     "params": [
       1800,
       0,
@@ -3595,7 +3595,7 @@
     ],
     "gold": 48,
     "name": "Beet Boxer",
-    "note": "<Element: Plant>\n<Passive State: 136>\n\n<Enemy Drops>\nVicious Herb: 30%\nMedicinal Herb: 10%\nMedicinal Root: 3%\nWorm: 50%\nWorm: 50%\nWorm: 50%\nCarrot Seeds: 2%\nWheat Seeds: 2%\nOat Seeds: 2%\nTomato Seeds: 2%\nEarth Essence: 20%\n</Enemy Drops>",
+    "note": "<Element: Plant>\n<Passive State: 136>\n\n<Enemy Drops>\nVicious Herb: 30%\nMedicinal Herb: 10%\nMedicinal Root: 3%\nWorm: 50%\nWorm: 50%\nWorm: 50%\nCarrot Seeds: 2%\nWheat Seeds: 2%\nOat Seeds: 2%\nTomato Seeds: 2%\nPlant Essence: 20%\n</Enemy Drops>",
     "params": [
       800,
       0,
@@ -4250,7 +4250,7 @@
     ],
     "gold": 500,
     "name": "Attacker Tellurium Golem",
-    "note": "<Element: Metal>\n<Passive State: 136, 140>\n\n<Breathing Speed: 20>\n<Attack Animation: 4>\n\n<Enemy Drops>\nTellurium Dust: 4%\nCopper Cluster: 100%\nCopper Cluster: 100%\nCopper Cluster: 50%\nCopper Cluster: 50%\nCopper Cluster: 25%\nCopper Cluster: 25%\nIron Cluster: 100%\nIron Cluster: 100%\nIron Cluster: 50%\nIron Cluster: 50%\nIron Cluster: 25%\nIron Cluster: 25%\n</Enemy Drops>",
+    "note": "<Element: Metal>\n<Passive State: 136, 140>\n\n<Breathing Speed: 20>\n<Attack Animation: 4>\n\n<Enemy Drops>\nTellurium Dust: 4%\nCopper Cluster: 100%\nCopper Cluster: 100%\nCopper Cluster: 50%\nCopper Cluster: 50%\nCopper Cluster: 25%\nCopper Cluster: 25%\nIron Cluster: 100%\nIron Cluster: 100%\nIron Cluster: 50%\nIron Cluster: 50%\nIron Cluster: 25%\nIron Cluster: 25%\nMetal Essence: 20%\n</Enemy Drops>",
     "params": [
       12000,
       0,
@@ -4306,7 +4306,7 @@
     ],
     "gold": 500,
     "name": "Defender Tellurium Golem",
-    "note": "<Element: Metal>\n<Passive State: 136, 140>\n\n<Breathing Speed: 20>\n<Attack Animation: 4>\n\n<Enemy Drops>\nTellurium Dust: 4%\nCopper Cluster: 100%\nCopper Cluster: 100%\nCopper Cluster: 50%\nCopper Cluster: 50%\nCopper Cluster: 25%\nCopper Cluster: 25%\nIron Cluster: 100%\nIron Cluster: 100%\nIron Cluster: 50%\nIron Cluster: 50%\nIron Cluster: 25%\nIron Cluster: 25%\n</Enemy Drops>",
+    "note": "<Element: Metal>\n<Passive State: 136, 140>\n\n<Breathing Speed: 20>\n<Attack Animation: 4>\n\n<Enemy Drops>\nTellurium Dust: 4%\nCopper Cluster: 100%\nCopper Cluster: 100%\nCopper Cluster: 50%\nCopper Cluster: 50%\nCopper Cluster: 25%\nCopper Cluster: 25%\nIron Cluster: 100%\nIron Cluster: 100%\nIron Cluster: 50%\nIron Cluster: 50%\nIron Cluster: 25%\nIron Cluster: 25%\nMetal Essence: 20%\n</Enemy Drops>",
     "params": [
       12000,
       0,
