@@ -7263,5 +7263,57 @@
     "speed": 0,
     "successRate": 100,
     "tpGain": 0
+  },
+  {
+    "id": 254,
+    "animationId": 0,
+    "consumable": false,
+    "damage": {
+      "critical": false,
+      "elementId": 0,
+      "formula": "0",
+      "type": 0,
+      "variance": 20
+    },
+    "description": "The essence of natural creatures. Dropped by\nplant-related enemies and used for crafting.",
+    "effects": [],
+    "hitType": 0,
+    "iconIndex": 200,
+    "itypeId": 1,
+    "name": "Plant Essence",
+    "note": "",
+    "occasion": 3,
+    "price": 2,
+    "repeats": 1,
+    "scope": 0,
+    "speed": 0,
+    "successRate": 100,
+    "tpGain": 0
+  },
+  {
+    "id": 255,
+    "animationId": 0,
+    "consumable": false,
+    "damage": {
+      "critical": false,
+      "elementId": 0,
+      "formula": "0",
+      "type": 0,
+      "variance": 20
+    },
+    "description": "The essence of metallic creatures. Dropped by\nmetal-related enemies and used for crafting.",
+    "effects": [],
+    "hitType": 0,
+    "iconIndex": 778,
+    "itypeId": 1,
+    "name": "Metal Essence",
+    "note": "",
+    "occasion": 3,
+    "price": 2,
+    "repeats": 1,
+    "scope": 0,
+    "speed": 0,
+    "successRate": 100,
+    "tpGain": 0
   }
 ]
