@@ -61,7 +61,7 @@ Additions:
    > Soul Shackles: Tome
    > Wyvern's Fury: Weapon, Tome
    > Ice II: Tome
- - Added 102 new items:
+ - Added 104 new items:
   ~ 8 recovery/buff items:
    > Well-Rounded Combination
    > Large Potion
@@ -82,7 +82,9 @@ Additions:
    > Wheat Seeds
    > Oat Seeds
    > Tomato Seeds
-  ~ 36 materials:
+  ~ 38 materials:
+   > Plant Essence
+   > Metal Essence
    > Fiery Powder
    > Malicious Essence
    > Shadowspec Ingot
